force-app/main/default/objects/Onboarding_Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Onboarding Applications</relationshipLabel>
    <relationshipName>Onboarding_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>