force-app/main/default/objects/Onboarding_Application__c/fields/Business_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Number__c</fullName>
    <label>Business License Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>