force-app/main/default/objects/Onboarding_Application__c/fields/Merchant_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Business_Name__c</fullName>
    <description>Merchants Business Name</description>
    <label>Merchant Business Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>