force-app/main/default/objects/Onboarding_Application__c/fields/Onboarding_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Onboarding Specialist assigned by the Agent</description>
    <inlineHelpText>Onboarding Specialist assigned by the Agent</inlineHelpText>
    <label>Onboarding Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>