force-app/main/default/objects/Onboarding_Application__c/fields/Operational_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Operational_Procedures__c</fullName>
    <description>Provide Details around your operational procedures</description>
    <inlineHelpText>Provide Details around your operational procedures</inlineHelpText>
    <label>Operational Procedures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>